# killitwithfire

./: .gitignore  CMakeCache.txt  README.md
MoA/Code/: CMakeLists.txt  GUI.fbp  main.cpp
MoA/Code/Decimation/: CMakeLists.txt  DecimationInterface.h  DecimationMesh.cpp  DecimationMesh.h  QuadricDecimationMesh.cpp  QuadricDecimationMesh.h  SimpleDecimationMesh.cpp  SimpleDecimationMesh.h
MoA/Code/Fluid/: CMakeLists.txt  FireGlobals.cpp  FireGlobals.h  FluidSolver.cpp  FluidSolver.h
MoA/Code/GUI/: CMakeLists.txt  FluidVoxelCutPlane.cpp  FluidVoxelCutPlane.h  FrameMain.cpp  FrameMain.h  GLAxis.cpp  GLAxis.h  GLCamera.h  GLGridPlane.cpp  GLGridPlane.h  GLObject.cpp  GLObject.h  GLViewer.cpp  GLViewer.h  GUI.cpp  GUI.h  ScalarCutPlane.cpp  ScalarCutPlane.h  VectorCutPlane.cpp  VectorCutPlane.h
MoA/Code/Geometry/: Bbox.h  CMakeLists.txt  CSG.h  Cube.cpp  Cube.h  Geometry.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Implicit.cpp  Implicit.h  ImplicitGradientField.h  ImplicitMesh.cpp  ImplicitMesh.h  ImplicitValueField.h  LineStrip.cpp  LineStrip.h  Mesh.cpp  Mesh.h  Quadric.cpp  Quadric.h  SignedDistanceSphere.cpp  SignedDistanceSphere.h  SimpleMesh.cpp  SimpleMesh.h  Sphere.cpp  Sphere.h  SphereFractal.cpp  SphereFractal.h
MoA/Code/Levelset/: CMakeLists.txt  LevelSet.cpp  LevelSet.h  LevelSetGrid.cpp  LevelSetGrid.h  LevelSetOperator.cpp  LevelSetOperator.h  OperatorAdvect.h  OperatorDilateErode.h  OperatorMeanCurvatureFlow.h  OperatorMorph.h  OperatorReinitialize.h  OperatorReinitializeFastMarching.h
MoA/Code/Math/: CMakeLists.txt  ConjugateGradient.h  ConstantVectorField.h  CoordMatrix.h  CoordMatrix_Impl.h  Function3D.h  Interpolator.h  Matrix4x4.h  TrilinearInterpolator.cpp  TrilinearInterpolator.h  Volume.h  VortexVectorField.h
MoA/Code/Subdivision/: AdaptiveLoopSubdivisionMesh.cpp  AdaptiveLoopSubdivisionMesh.h  CMakeLists.txt  LoopSubdivisionMesh.cpp  LoopSubdivisionMesh.h  StrangeSubdivisionMesh.h  Subdivision.h  UniformCubicSpline.cpp  UniformCubicSpline.h  UniformCubicSplineSubdivisionCurve.cpp  UniformCubicSplineSubdivisionCurve.h  kod (1).rar
MoA/Code/Util/: BitMask3D.h  BlackWhiteColorMap.cpp  BlackWhiteColorMap.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  ColorMapFactory.cpp  ColorMapFactory.h  Console.cpp  Console.h  GLObjectPlayback.cpp  GLObjectPlayback.h  GreenRedColorMap.cpp  GreenRedColorMap.h  HSVColorMap.cpp  HSVColorMap.h  Heap.cpp  Heap.h  HotColorMap.cpp  HotColorMap.h  Image.h  Image_Impl.h  IsoContourColorMap.cpp  IsoContourColorMap.h  JetColorMap.cpp  JetColorMap.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesTable.h  ObjIO.cpp  ObjIO.h  Stopwatch.h  Util.cpp  Util.h  cmap.m
MoA/Code/VC++/: Readme.txt
MoA/Code/VC++/include/msvc/wx/: setup.h
MoA/Code/VC++/include/wx/: any.h  app.h  arrstr.h  bookctrl.h  buffer.h  button.h  chartype.h  chkconf.h  choicebk.h  colour.h  combo.h  confbase.h  control.h  dataview.h  datetime.h  defs.h  dialog.h  dir.h  docview.h  dvrenderers.h  event.h  evtloop.h  file.h  filefn.h  gdicmn.h  graphics.h  image.h  list.h  listbook.h  listbox.h  log.h  menu.h  mimetype.h  msgdlg.h  msgqueue.h  object.h  odcombo.h  ownerdrw.h  platform.h  popupwin.h  (+22 more)
MoA/Code/VC++/include/wx/aui/: framemanager.h
MoA/Code/VC++/include/wx/generic/: dataview.h  dvrenderer.h  dvrenderers.h  grid.h  gridctrl.h  laywin.h  panelg.h  progdlgg.h  spinctlg.h  treectlg.h
MoA/Code/VC++/include/wx/gtk/: combobox.h  dvrenderer.h  dvrenderers.h  listbox.h  menu.h  tglbtn.h  toplevel.h  window.h
MoA/Code/VC++/include/wx/gtk1/: menu.h  tglbtn.h
MoA/Code/VC++/include/wx/html/: forcelnk.h  helpctrl.h  helpfrm.h  helpwnd.h  htmlpars.h  htmltag.h  htmlwin.h  htmprint.h  webkit.h  winpars.h
MoA/Code/VC++/include/wx/motif/: setup0.h
MoA/Code/VC++/include/wx/msw/: app.h  button.h  gdiimage.h  menu.h  menuitem.h  printwin.h  private.h  textctrl.h  tglbtn.h  tls.h  toplevel.h  uxtheme.h  window.h
MoA/Code/VC++/include/wx/os2/: setup0.h  tglbtn.h  treectrl.h
MoA/Code/VC++/include/wx/osx/: app.h  button.h  choice.h  colordlg.h  combobox.h  dataview.h  dialog.h  dirdlg.h  dvrenderer.h  evtloop.h  filedlg.h  font.h  fontdlg.h  icon.h  listbox.h  listctrl.h  menu.h  menuitem.h  metafile.h  minifram.h  msgdlg.h  popupwin.h  setup0.h  textctrl.h  tglbtn.h  toolbar.h  (+2 more)
source/: AdvectEuler.cpp  BlackBodyRadiation.cpp  BlackBodyRadiation.h  BorderCondition.cpp  BorderCondition.h  CMakeLists.txt  Camera.cpp  Camera.h  CentralDiff.cpp  CentralDiff.h  CreateLevelset.h  DetonationShockDynamics.cpp  DetonationShockDynamics.h  Discretization.h  Divergence.cpp  Divergence.h  ExtrapolateConstant.h  Extrapolation.h  Gradient.cpp  Gradient.h  Grid.cpp  Grid.h  GridField.h  GridField.hpp  GridFieldFileManager.h  GridFieldIO.h  GridFieldIO.hpp  GridMapping.cpp  GridMapping.h  Helper.cpp  Helper.h  ImplicitFunctions.h  Input.cpp  Input.h  Interpolation.h  JumpCondition.cpp  JumpCondition.h  LevelSet.cpp  LevelSet.h  MACGrid.cpp  (+29 more)
source/GhostMAC/: GhostGrid.h  GhostGrid.hpp  GhostMAC.cpp  GhostMAC.h
source/Pressure/: Projection.cpp  Projection.h  Projection2.cpp  Projection2.h  Projection2D.cpp  Projection2D.h  Projection3D.cpp  Projection3D.h
source/Pressure/pcgsolver/: blas_win.h  blas_wrapper.h  pcg_solver.h  util.h
source/Water/: Particles.cpp  Particles.h  Projection2D.cpp  Projection2D.h  Projection3D.cpp  Projection3D.h  Water2D.cpp  Water2D.h  Water3D.cpp  Water3D.h
source/advect/: Advect.h  AdvectEuler.cpp  AdvectEuler.h  AdvectLevelSet.h  AdvectLevelSetEuler.cpp  AdvectLevelSetEuler.h  AdvectRK2.cpp  AdvectRK2.h  MACAdvect.h
source/armadillo/armadillo_bits/: fn_histc.hpp  fn_unique.hpp  glue_histc_bones.hpp
source/discretization/: CentralDiff.cpp  CentralDiff.h  UpwindDiff.cpp  UpwindDiff.h
source/extrapolation/: ClosestValueExtrapolation.h  ConstantValueExtrapolation.h  Extrapolation.h  SimpleLevelSetExtrapolation.cpp  SimpleLevelSetExtrapolation.h
source/levelset/: ImplicitFunctions.h  LevelSet.cpp  LevelSet.h  MACAdvect.h  meshtovolumeconverter.cpp  meshtovolumeconverter.h
source/presets/: firePresets.h  firePresetsTwoDimension.h
(+87 files in other folders)
